<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="vertical"
    android:background="#95533C"
    tools:context=".activity.SignUpActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/create_new_account"
                android:textColor="@color/primary_text"
                android:textSize="18sp"
                android:textStyle="bold" />
           <FrameLayout
               android:id="@+id/layoutImage"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp">
               <com.makeramen.roundedimageview.RoundedImageView
                   android:id="@+id/imageProfile"
                   android:layout_width="80dp"
                   android:layout_height="80dp"
                   android:background="@drawable/background_image"
                   android:scaleType="centerCrop"
                   app:riv_oval="true"
                   />
               <TextView
                   android:id="@+id/textAddImage"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:text="@string/add_image"
                   android:textColor="@color/secondary_text"
                   android:textSize="10sp"
                   />
           </FrameLayout>

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_input"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/primary_text"
                android:textSize="13sp" />
            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_input"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/primary_text"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_input"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/primary_text"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/inputconfirmpassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_input"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/primary_text"
                android:textSize="13sp" />
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:animateLayoutChanges="true"
                >
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="13sp"

                    android:textStyle="bold"
                    app:cornerRadius="8dp" />
                 <ProgressBar
                     android:id="@+id/progressBar"
                     android:layout_width="@dimen/_25sdp"
                     android:layout_height="@dimen/_25sdp"
                     android:layout_gravity="center"
                     android:visibility="invisible"/>
            </FrameLayout>

            <TextView
                android:id="@+id/textSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sign_in"
                android:textColor="@color/primary_dark"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

</ScrollView>